[package]
name = "ore-bar"
version = "0.0.7-alpha.5"
description = "A UI tool for ORE designed to easily monitor status, claim, and stake ORE."
license = "MIT"
repository = "https://github.com/ByteEothas/ore-bar.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
url = "2.5.2"
iced = { version="0.12.1", features = ["advanced","svg", "canvas", "highlighter", "tokio", "debug"] }
lyon_algorithms = "1.0"
once_cell = "1.0"
copypasta = "0.10.1"
ore-api = "2.0.0-beta.5"
ore-utils = "2.0.0-beta.5"
cached = "0.46.1"
tokio = "1.35.1"
toml = "0.8.13"
chrono = "0.4.38"
chrono-tz = "0.9.0"
rfd = "0.13"
reqwest = {version="0.11.3", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
